# python-work-dir

./: .gitignore  Collatz's_hypothesis.py  average_score.py  beatles.py  bitwise_operators.rtf  bmi_index.py  bubble_sort.py  chupacabra.py  day_of_year_check.py  days_in_month.py  doing_the_swap.py  exceptions.py  factorial.py  factorial_recursion.py  failed_test_1.py  fibonacci_recursion.py  first.py  heron_triangle_square.py  inner_life_of_lists.py  input_test.py  lab_2.6.1.11_duration_minutes.py  lb_ft_in_to metric.py  leap_year_as_func_with_test.py  left_shift_right_shift.py  list_comprehension.py  list_del_len.py  list_largest.py  list_tricky.py  list_with_unique_values.py  lists_comparison.py  loops_summary.py  matrix_2D_weather_station.py  matrix_3D_room_floor_building.py  miles_to_gallons.py  mississippi.py  morgan_law.py  natural_input_check.py  prime_numbers.py  pyramide.py  range_with_step_negative.py  (+11 more)
Python_intensive_YLAB/menu_api/: .gitignore  README.md  alembic.ini  pyproject.toml  run.sh  test.py
Python_intensive_YLAB/menu_api/alembic/: env.py
Python_intensive_YLAB/menu_api/alembic/versions/: 73ddf3df6ebc_create_tables_for_menus_db.py  a1826e6f2c5e_create_tables_for_menus_db.py  a3284ffd9683_create_tables_for_menus_db.py  c11c505eea91_create_tables_for_menus_db.py
Python_intensive_YLAB/menu_api/app/: main.py
Python_intensive_YLAB/menu_api/app/crud/: base.py  crud_menus.py  crude_dishes.py  crude_submenus.py
Python_intensive_YLAB/menu_api/app/db/: base.py  base_class.py  psql_cred.py  session.py
Python_intensive_YLAB/menu_api/app/models/: menus.py  (+2 more)
(+323 files in other folders)
